# UmaGuess

./: LICENSE  README.md
UmaGuesser/: pyproject.toml
UmaGuesser/Uma_Guesser_Cli/: Uma.json  UmaResult.json  main.py
