[project]
name = "uma-guesser"
version = "0.1.0"
description = "An project inspired by UmaGuessr which is also a fan project. Character name obtain from umapyoi.net thanks for all the Umamusumes name."
authors = [
    {name = "Xroi_ty"}
]
requires-python = "3.10"
dependencies = [
    "click (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
uma-guesser = "Uma_Guesser_Cli.main:introduction"
